Replaced docker with img and add img login
